  NEW, otherwise its status will be RTS. And the status of all the dependent
  tasks will be updated on any review has been made to a task.
* **Fix:** Fixed ``GanttGrid.js`` where the event argument was not set for
  right arrow and down arrow key functions.
* **Fix:** A bug is fixed in ``views.entity.submit_search()`` and
  ``views.entity.list_search_result()`` views.

0.1.4
=====

* **New:** Added "Create" button to ``view_ticket.jinja2`` template. So it is
  now possible to create a new ticket using the dialog.
* **Fix:** Fixed "Asset", "Shot", "Sequence" menu entries under "Create" sub
  menu under "Actions" menu in ``list_tasks.jinja2`` template.
* **Fix:** Fixed "Create" button address in ``list_entity_assets.jinja2``,
  ``list_entity_shots.jinja2`` and ``list_entity_sequences.jinja2`` templates.
* **Update:** Removed schedule related fields from Task Dialog when the entity
  type is Asset, Shot or Sequence.
* **Fix:** Replaced "?came_from=" statements with proper "_query()" arguments
  in several templates.
* **New:** Link statuses are now shown in ``view_ticket.jinja2`` if the link is
  a Task derivative.
* **Fix:** Fixed a bug in the sql query in ``views.auth.get_resources()`` view.
* **New:** Added new Ticket type called "Review" and updated
  ``task.request_review()`` to use this type for newly created Review Tickets.

0.1.3
=====

* **Update:** Upgraded to `stalker v0.2.3.3`.
* **Fix:** Any TicketLog created for a Ticket is now created with UTC time.
* **Update:** When a Ticket is updated all of the previous commenters will also
  receive emails.
* **New:** Ticket status changes are also emailed to anybody related to the
  particular ticket.

0.1.2
=====

* **Update:** Upgraded to `stalker v0.2.3.2`.
* **Update:** Separated the create/update/review dialog routes for Task, Asset,
  Shot and Sequences.
* **New:** Added utc_to_local() and local_to_utc() functions to
  stalker_pyramid.views module.